# epdfview

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  BUILD_STATUS.md  BUILD_SUCCESS_FINAL.md  BUILD_WINDOWS.md  CONTRIBUTING  COPYING  CURRENT_STATUS.md  ChangeLog  INSTALL  INSTALLATION.md  Makefile.am  Makefile.in  NEWS  PRINT_MIGRATION_TODO.md  PROJECT_STATUS.md  README  README.md  RUN_EPDFVIEW_WSL.md  STATUS.md  THANKS  TRANSLATION  aclocal.m4  build-on-arch.sh  build-windows.bat  build-windows.ps1  config.h.in  configure  configure.ac  meson.build  meson_options.txt  quick-build.sh
.github/workflows/: build.yml
.kiro/specs/gtk4-meson-migration/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
data/: Makefile.am  Makefile.in  README.md  bsd.latexmkrc  dot.latexmkrc  epdfsync  epdfview-ui.xml  epdfview.1  epdfview.desktop  epdfview.desktop.in  meson.build
doc/: Doxyfile.in  Makefile.am  Makefile.in
docs/: CI_FIXES_2025-11-12.md  CLEANUP_SUMMARY.md  COMPILATION_SUCCESS.md  COMPLETE_GTK4_MIGRATION.md  CRASH_FIX_2025-11-12.md  CRITICAL_BUG_FIXES.md  CURRENT_STATUS.md  DOCUMENTATION.md  FINAL_FIXES.md  GTK4_MIGRATION_NOTES.md  GTK4_MIGRATION_SUMMARY.md  MENU_SYSTEM_COMPLETE.md  PDF_RENDERING_FIXES.md  README.md  TODO_NEXT_SESSION.md  TRANSLATIONS_AND_DOCS.md
intl/: config.charset  localename.c
m4/: Makefile.am  Makefile.in  cups.m4
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ar.gmo  ar.po  ca.gmo  ca.po  cs.gmo  cs.po  de.gmo  de.po  el.gmo  el.po  epdfview.pot  es.gmo  es.mo  es.po  eu.gmo  eu.po  fr.gmo  fr.po  gl.gmo  gl.po  he.gmo  he.po  he_IL.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  meson.build  nl.gmo  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  (+12 more)
snap/: snapcraft.yaml
src/: Config.cxx  Config.h  DocumentLinkGoto.cxx  DocumentLinkGoto.h  DocumentLinkUri.cxx  DocumentLinkUri.h  DocumentOutline.cxx  DocumentOutline.h  DocumentPage.cxx  DocumentPage.h  DocumentRectangle.cxx  DocumentRectangle.h  FindPter.cxx  FindPter.h  IDocument.cxx  IDocument.h  IDocumentLink.cxx  IDocumentLink.h  IDocumentObserver.h  IFindView.h  IJob.cxx  IJob.h  IMainView.h  IPageView.h  IPreferencesView.h  IPrintView.h  JobFind.cxx  JobFind.h  JobLoad.cxx  JobLoad.h  JobPrint.cxx  JobPrint.h  JobRender.cxx  JobRender.h  JobSave.cxx  JobSave.h  MainPter.cxx  MainPter.h  Makefile.am  Makefile.in  (+12 more)
src/gtk/: FindView.cxx  FindView.h  MainView.cxx  MainView.h  Makefile.am  Makefile.in  PageView.cxx  PageView.h  PreferencesView.cxx  PreferencesView.h  PrintView.cxx  PrintView.h  StockIcons.cxx  StockIcons.h  meson.build
tests/: ConfigTest.cxx  ConfigTest.h  DocumentOutlineTest.cxx  DocumentOutlineTest.h  DumbDocument.cxx  DumbDocument.h  DumbDocumentObserver.cxx  DumbDocumentObserver.h  DumbFindView.cxx  DumbFindView.h  DumbMainView.cxx  DumbMainView.h  DumbPageView.cxx  DumbPageView.h  DumbPreferencesView.cxx  DumbPreferencesView.h  DumbPrintView.cxx  DumbPrintView.h  FindPterTest.cxx  FindPterTest.h  MainPterTest.cxx  MainPterTest.h  Makefile.am  Makefile.in  PDFDocumentTest.cxx  PDFDocumentTest.h  PagePterTest.cxx  PagePterTest.h  PreferencesPterTest.cxx  PreferencesPterTest.h  PrintPterTest.cxx  PrintPterTest.h  Utils.cxx  Utils.h  main.cxx  meson.build
