# Process this file with automake to produce a Makefile.in file.
EXTRA_DIST =	\
	icon_epdfview-24.png	\
	icon_epdfview-32.png	\
	icon_epdfview-48.png	\
	stock_find_next_24.png	\
	stock_find_previous_24.png	\
	stock_rotate-90.png	\
	stock_rotate-270.png	\
	stock_zoom-page-width.png	\
	epdfview.1	\
	epdfview-ui.xml	\
	epdfview-ui-print.xml	\
	epdfview.desktop

pixmapdir = $(pkgdatadir)/pixmaps
pixmap_DATA =	\
	icon_epdfview-24.png	\
	icon_epdfview-32.png	\
	icon_epdfview-48.png	\
	stock_find_next_24.png	\
	stock_find_previous_24.png	\
	stock_rotate-90.png	\
	stock_rotate-270.png	\
	stock_zoom-page-width.png

uidir = $(pkgdatadir)/ui
ui_DATA =	\
	epdfview-ui.xml	\
	epdfview-ui-print.xml

desktopdir = $(datadir)/applications
desktop_DATA =	\
	epdfview.desktop

man1_MANS = epdfview.1
