gtk_sources = [
  join_paths(meson.current_source_dir(), 'FindView.cxx'),
  join_paths(meson.current_source_dir(), 'MainView.cxx'),
  join_paths(meson.current_source_dir(), 'PageView.cxx'),
  join_paths(meson.current_source_dir(), 'PreferencesView.cxx'),
  join_paths(meson.current_source_dir(), 'PrintView.cxx'),
  join_paths(meson.current_source_dir(), 'StockIcons.cxx'),
]